--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,204 +1,128 @@
-/**
- * Reset some basic elements
- */
-body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
-    margin: 0;
-    padding: 0;
-}
+@charset "UTF-8";
+@import "compass";
+@import "normalize";
 
+@import url("http://fonts.googleapis.com/css?family=Alegreya:400italic,700italic,400,700");
 
-
-/**
- * Basic styling
- */
+//// global styles
 body {
-    font-family: $base-font-family;
-    font-size: $base-font-size;
-    line-height: $base-line-height;
-    font-weight: 300;
-    color: $text-color;
-    background-color: $background-color;
-    -webkit-text-size-adjust: 100%;
+  font-family: "Alegreya", Georgia, serif;
+}
+footer {
+  font-style: italic;
+  em {
+    font-style: normal;
+  }
+}
+
+// ==============
+// DIMENSIONS
+// ==============
+$break1: 1100px;
+$break2: 875px;
+$break3: 500px;
+
+/* ----------------------
+/* APPLY THESE EVERYWHERE
+/* -------------------- */
+/* apply a natural box layout model to all elements */
+// http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+// YOU MIGHT HAVE TO SET BORDERS EVERYWHERE NOW
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
 
 
-
-/**
- * Set `margin-bottom` to maintain vertical rhythm
- */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
-%vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
+//////// MIXINS //////////////////
+@mixin hide {
+  position: absolute;
+  left: -999em;
+  /* apparently this second push is for old Opera:
+  /* http://css-tricks.com/snippets/css/accessibilityseo-friendly-css-hiding/ */
+  top: -999px;
 }
 
-
-
-/**
- * Images
- */
-img {
-    max-width: 100%;
-    vertical-align: middle;
-}
-
-
-
-/**
- * Figures
- */
-figure > img {
-    display: block;
-}
-
-figcaption {
-    font-size: $small-font-size;
-}
-
-
-
-/**
- * Lists
- */
-ul, ol {
-    margin-left: $spacing-unit;
-}
-
-li {
-    > ul,
-    > ol {
-         margin-bottom: 0;
+@mixin inline($separator, $sep) {
+  ul, li {
+    /* http://www.alistapart.com/articles/taminglists/ */
+    display: inline;
+    margin: 0;
+    padding-left: 0;
+  }
+  li + li {
+    padding-left: $sep/2;
+    &::before {
+      font-style: normal;
+      content: $separator;
+      padding-right: $sep/2;
     }
+  }
+}
+/* ------------------
+/* TEXT SIZING
+/* --------------- */
+body {
+  font-size: 16pt;
+}
+h1 {
+  font-size: 225%;
+}
+h2 {
+  font-size: 150%;
+}
+h3 {
+  font-size: 131.25%;
+}
+h4,
+h5,
+h6 {
+  font-size: 112.5%;
+}
+h5,
+h6 {
+  font-style: italic;
+}
+h6 {
+  font-weight: normal;
 }
 
-
-
-/**
- * Headings
- */
-h1, h2, h3, h4, h5, h6 {
-    font-weight: 300;
+//// MEDIA QUERIES
+@media screen and (max-width: $break2) {
+  body {
+    font-size: 14pt;
+  }
+  h1 {
+    font-size: 225%;
+  }
+  h2 {
+    font-size: 150%;
+  }
+  h3 {
+    font-size: 131.25%;
+  }
+  h4,
+  h5,
+  h6 {
+    font-size: 112.5%;
+  }
 }
 
-
-
-/**
- * Links
- */
-a {
-    color: $brand-color;
-    text-decoration: none;
-
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
-
-    &:hover {
-        color: $text-color;
-        text-decoration: underline;
-    }
-}
-
-
-
-/**
- * Blockquotes
- */
-blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
-    padding-left: $spacing-unit / 2;
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic;
-
-    > :last-child {
-        margin-bottom: 0;
-    }
-}
-
-
-
-/**
- * Code formatting
- */
-pre,
-code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
-}
-
-code {
-    padding: 1px 5px;
-}
-
-pre {
-    padding: 8px 12px;
-    overflow-x: scroll;
-
-    > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
-    }
-}
-
-
-
-/**
- * Wrapper
- */
-.wrapper {
-    max-width: -webkit-calc(800px - (#{$spacing-unit} * 2));
-    max-width:         calc(800px - (#{$spacing-unit} * 2));
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
-    @extend %clearfix;
-
-    @include media-query($on-laptop) {
-        max-width: -webkit-calc(800px - (#{$spacing-unit}));
-        max-width:         calc(800px - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
-    }
-}
-
-
-
-/**
- * Clearfix
- */
-%clearfix {
-
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-}
-
-
-
-/**
- * Icons
- */
-.icon {
-
-    > svg {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        vertical-align: middle;
-
-        path {
-            fill: $grey-color;
-        }
-    }
+@media screen and (max-width: $break3) {
+  body {
+    font-size: 12pt;
+  }
+  h1 {
+    font-size: 171.5%;
+  }
+  h2 {
+    font-size: 150%;
+  }
+  h3 {
+    font-size: 128.5%;
+  }
+  h4,
+  h5,
+  h6 {
+    font-size: 114.3%;
+  }
 }
