--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+    <main>
+      {% for category in page.categories %}
+        {{ category }}
+      {% endfor %}
+    </main>
 
     {% include footer.html %}
 
